exports[`PostsList:snapshot should render a "loading" Post when there's no data for a given id 1`] = `
<div
  className="container">
  <Post
    post={Object {}} />
  <Post
    post={Object {}} />
  <Post
    post={
      Object {
        "title": "loading",
        "url": "loading"
      }
    } />
</div>
`;

exports[`PostsList:snapshot should render correctly 1`] = `
<div
  className="container">
  <Post
    post={Object {}} />
  <Post
    post={Object {}} />
</div>
`;

exports[`PostsList:snapshot should render correctly when isLoading is true 1`] = `
<div
  className="container">
  LOADING FEED...
</div>
`;
